# Experiments_of_CG_course

./: .gitignore  README.md  pyproject.toml
src/Work1/: README.md  config.py  main.py  physics.py
src/Work2/: README.md  config.py  main.py  physics.py
src/Work3/: README.md  config.py  geometry.py  main.py  rasterizer.py
src/Work4/: README.md  config.py  geometry.py  main.py  renderer.py  shader.py
src/Work5/: README.md  config.py  main.py  raytracer.py
src/Work6/: README.md  __init__.py  config.py  main.py  mesh_utils.py  optimizer.py  renderer.py  visualization.py
src/Work7/: README.md  __init__.py  config.py  main.py  physics.py  renderer.py
src/Work8/: README.md  __init__.py  animation.py  config.py  lbs.py  main.py  model_utils.py  visualization.py
