[project]
name = "cg-lab"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "imageio>=2.37.3",
    "imageio-ffmpeg>=0.6.0",
    "matplotlib>=3.11.0",
    "numpy>=2.4.2",
    "smplx>=0.1.28",
    "taichi>=1.7.4",
    "torch>=2.12.1",
]
